[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://assets/art/tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/UserInterface/ScrollContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/SelectLevelMenu.gd" type="Script" id=4]

[node name="SelectLevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTileMap" type="TileMap" parent="."]
position = Vector2( 0.366, 0 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -196597, -1610612736, 0, -131057, 0, 0, -65529, 1073741824, 0, -65524, -1610612736, 0, 0, 0, 0, 3, 1073741824, 0, 9, 1073741824, 0, 15, 0, 0, 65542, 1073741824, 0, 131084, 0, 0, 196611, 1073741824, 0, 196623, 0, 0, 262144, 1073741824, 0, 262154, 1073741824, 0, 327687, 1073741824, 0, 393229, -1610612736, 0, 458755, 1073741824, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect"]
margin_right = 800.0
margin_bottom = 80.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/CenterContainer2"]
margin_left = 297.0
margin_top = 21.0
margin_right = 502.0
margin_bottom = 59.0
text = "SELECT LEVEL"

[node name="ScrollContainer" parent="ColorRect" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 422.0
theme = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_top = 360.0
margin_right = 800.0
margin_bottom = 440.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer"]
margin_left = 356.0
margin_top = 17.0
margin_right = 444.0
margin_bottom = 63.0
theme = ExtResource( 1 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ColorRect/CenterContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
